# wsi-decision-tree

./: README.md  dataset.py  decision_trees.py  main.py  pyproject.toml  test_decision_trees.py
docs/: cwiczenie-4.html  sprawozdanie.md
