[tool.poetry]
name = "04-drzewa-decyzyjne"
version = "0.1.0"
description = ""
authors = ["mgarbowski <mikolaj.garbowski@gmail.com>"]
readme = "README.md"
packages = [{include = "04_drzewa_decyzyjne"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
